--- a/businessCard/package.json
+++ b/businessCard/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hardhat-project",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.8.2"
+    "@openzeppelin/contracts": "^4.8.2",
+    "hardhat": "^2.13.0"
   }
 }
